@@ -806,6 +806,7 @@ Mark Sapiro
 Ty Sarna
 Ben Sayer
 sbt
+Marco Scataglini
 Andrew Schaaf
 Michael Scharf
 Andreas Schawo
@@ -830,7 +831,7 @@ Nick Seidenman
 Yury Selivanov
 Fred Sells
 Jiwon Seo
-Roger D. Serwy
+Roger Serwy
 Jerry Seutter
 Denis Severson
 Ian Seyer
